# ssocket-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: client.rs  server.rs
src/: lib.rs  public.rs
src/sys/: unix.rs  windows.rs
